--- a/js1/17.html
+++ b/js1/17.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -33,6 +33,6 @@
   <div id="aqi-chart-wrap">
   </div>
   <!--<script type="text/javascript" src="js/17.js" ></script>-->
-  <script type="text/javascript" src="js/17.1.js" ></script>
+  <script type="text/javascript" src="js/17.js" ></script>
 </body>
 </html>
