--- a/js1/21.html
+++ b/js1/21.html
@@ -4,7 +4,19 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<style>
-			#container div{
+			#container1 div{
+				display: inline-block;
+				font-size: 50px;
+				text-align:center;
+				padding: 0 15px;;
+				margin: 2px;
+				margin-right: 10px;
+				height:50px;
+				line-height: 50px;
+				background-color: lightskyblue;
+				color: #FFFFFF;
+			}
+			#container2 div{
 				display: inline-block;
 				font-size: 50px;
 				text-align:center;
@@ -21,12 +33,15 @@
 	<body>
 		<input id="num" type="text" />
 		<input value="Tag" type="button" />
+		<div id="container1">
+			
+		</div>
 		<br />
 		<textarea id="inputbox">江蛤蛤，蛤三篇,哈斯、蛤啤   蛤宝 大新闻 华莱士</textarea>
 		<br />
 		<input value="确认兴趣爱好" type="button" />
 		
-		<div id="container">
+		<div id="container2">
 			
 		</div>
 	<script type="text/javascript" src="js/21.js" ></script>	
